chore: 优化代码，修改sonar中的缺陷提示